--- a/src/app/shared/post-it-collections/post-it-collections.component.scss
+++ b/src/app/shared/post-it-collections/post-it-collections.component.scss
@@ -14,7 +14,7 @@
       width: $post-it-width;
 
       &:hover {
-        z-index: 1000;
+        z-index: $z-index-postit-hover;
       }
     }
 
